<resources>
    <string name="app_name">LavadoFacil</string>
    <string name="activity_login_app_name">Iniciar sesión</string>
    <string name="activity_main_app_name">Principal</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="error_user_or_password_invalid">Usuario y/o contraseña incorrecta!</string>
    <string name="alert_dialog_error_title">Error:</string>
    <string name="error_insert_user">Ingrese usuario!</string>
    <string name="error_insert_password">Ingrese password!</string>
    <string name="title_activity_login_result_prueba">LoginResultPrueba</string>
    <string name="title_activity_main_menu">MainMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="logout_are_you_sure">Esta seguro que desea desloguearse?</string>
    <string name="logout_confirmation_title">Confirmación</string>
    <string name="logging_application_exception">"[APPLICATION EXCEPTION] "</string>
    <string name="title_como_usar_app">Como usar la App</string>
    <string name="title_modificar_cliente">Modificar cliente</string>
    <string name="title_logout">Cerrar sesión</string>
    <string name="dialog_confirmation_title">Confirmación</string>
    <string name="logout_dialog_confirmation_message">Esta seguro que desea desloguearse?</string>
    <string name="logout_dialog_confirmation_title">Confirmación</string>
    <string name="leaving_alta_solicitud_confirmation_message">Esta seguro que desea salir
        de Alta solicitud de lavado? Todos los cambios se perderán. </string>

    <string name="exception_nullpointerexception">"Se ha intentado llamar a un método o evento de un objeto cuya referencia no fue establecida como instancia de objeto."</string>
    <string name="exception_networkonmainthreadexception">"Aplicación intenta realizar una operación de red en su hilo principal"</string>
    <string name="exception_connectexception">"Ha ocurrido un error de conexión. Asegurese de tener conexión a internet e intente nuevamente."</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_alta_solicitud_lavado">Alta solicitud de lavado</string>

    <string name="action_bar_button_siguiente">Siguiente</string>
    <string name="action_bar_button_anterior">Anterior</string>
    <string name="fragment_alta_solicitud_step_one_txtsubtitulo_value">Estos son sus datos.
        Continue en caso de que esté seguro que los mismos esten correctos.</string>
    <string name="fragment_alta_solicitud_step_two_txtsubtitulo_value">Prendas:</string>
    <string name="fragment_alta_solicitud_step_two_txtcantidadtitle_value">Cant:</string>
    <string name="fragment_alta_solicitud_step_two_txtcantidad_value">[C]</string>
    <string name="fragment_alta_solicitud_step_two_txtnomprenda_value">[NomPda]</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="no_data_descripcion">Aún no has ingresado ninguna prenda. Prueba agregar una!</string>
    <string name="ups">Ups!</string>
    <string name="seleccione_cantidad">Seleccione una cantidad:</string>
    <string name="ingrese_datos_prenda">Ingrese los datos de la prenda:</string>
    <string name="seleccione_prenda">Seleccione prenda:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="excepciones">Excepciones:</string>
    <string name="action_bar_button_aceptar">Aceptar</string>
    <string name="seleccione_item">[Seleccione]</string>
    <string name="button_aceptar">Aceptar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="add_excepcion_title">Agregar excepción:</string>
    <string name="select_excepcion_dialog_title">Seleccionar excepción:</string>
</resources>
