<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    tools:context="android.obligatorio.emisorasapp.AudioPlayerAct"
    android:layout_height="80dp"
    android:background="@drawable/lishape_selection_rlrowcontent"
    android:id="@+id/rlRowContent">

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="fill_parent"
        android:id="@+id/rlCantColumna"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/background_15_percent_darker_round">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/fragment_alta_solicitud_step_two_txtcantidadtitle_value"
            android:id="@+id/txtCantidadTitle"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="false"
            android:singleLine="true" />

        <TextView
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/fragment_alta_solicitud_step_two_txtcantidad_value"
            android:id="@+id/txtCantidad"
            android:textColor="@android:color/black"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtCantidadTitle"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fragment_alta_solicitud_step_two_txtnomprenda_value"
        android:id="@+id/txtNomPrenda"
        android:textColor="#000000"
        android:padding="5dp"
        android:textSize="25sp"
        android:enabled="false"
        android:background="#00000000"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/rlCantColumna"
        android:layout_toLeftOf="@+id/rlCantColumna"
        android:layout_alignParentBottom="true" />
</RelativeLayout>