<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pbLoader"
        android:visibility="gone"
        android:indeterminate="true" />
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/ingrese_datos_prenda"
                android:textColor="#ff000000"
                android:singleLine="false"
                android:textAppearance="@style/Subtitulo1"
                android:id="@+id/txtSubtitulo1"
                android:layout_gravity="left|top"
                android:textIsSelectable="false"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/seleccione_prenda"
                android:id="@+id/txtPrenda"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtSubtitulo1" />
            <Spinner
                android:id="@+id/spnPrendasValue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:layout_below="@+id/txtPrenda"
                android:paddingBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cantidad"
                android:id="@+id/txtDelete"
                android:layout_alignParentLeft="true"
                android:paddingTop="15dp"
                android:layout_below="@+id/spnPrendasValue" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtCantValue"
                android:layout_below="@+id/txtDelete"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/excepciones"
                android:id="@+id/txtExcepciones"
                android:layout_alignParentLeft="true"
                android:paddingTop="15dp"
                android:layout_below="@+id/txtCantValue" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/llOptions"
                android:gravity="right"
                android:background="@drawable/background_15_percent_darker"
                android:layout_below="@+id/txtExcepciones">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnAdd"
                    android:src="@drawable/ic_add_button"
                    android:background="#00ffffff" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView"
                    android:src="@drawable/ic_separator" />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnInfo"
                    android:background="#00ffffff"
                    android:src="@drawable/ic_info_button"
                    android:paddingRight="20dp" />
            </LinearLayout>
            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lvExcepciones"
                android:layout_gravity="center"
                android:layout_below="@+id/llOptions" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>